--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,8 @@ AUTH_GOOGLE_SECRET={CLIENT_SECRET}
 
 AUTH_GITHUB_ID={CLIENT_ID}
 AUTH_GITHUB_SECRET={CLIENT_SECRET}
+
+
+DATABASE_URL=""
+
+DIRECT_URL=""
